# embeded-testing-guide

./: 404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  sitemap.xml
assets/js/: 017cdffa.a39da392.js  03cd1efc.77c673a7.js  03cd1efc.cc30ad11.js  0587e7f9.27512dd5.js  0587e7f9.5290f435.js  0587e7f9.a924ea0c.js  107788ef.0ed509e9.js  107788ef.6594fc8e.js  107788ef.f08be774.js  146e4468.688311fd.js  146e4468.d9ac64b7.js  14a62ef4.aac46c2a.js  16ffade1.8ffb3bf7.js  17358195.a64d9b27.js  17896441.9d7bbc27.js  1a3c9b31.41580fed.js  1a3c9b31.4849767c.js  1a3c9b31.5e205b0e.js  1a3c9b31.bc9695d0.js  1aab259d.25357610.js  1aab259d.665101f4.js  1aab259d.da1f5790.js  1bdd9b72.0a201995.js  1df93b7f.7f890393.js  1df93b7f.93901e61.js  1df93b7f.d6eaebde.js  1df93b7f.e2b0d3e3.js  1f391b9e.77dc18ec.js  260df6a2.54074b85.js  260df6a2.64ba03eb.js  260df6a2.763daa0b.js  260df6a2.b78f63b6.js  260df6a2.cd52f143.js  260df6a2.e7817a3e.js  2e5b97d7.03091dd3.js  2e5b97d7.289057ab.js  2e5b97d7.2fe98e3d.js  2e5b97d7.3f2b27a4.js  2e5b97d7.4a0a5424.js  2e5b97d7.5a8366d9.js  (+101 more)
code/: .clang-format  .gitignore  Makefile  runTestSuite.sh  runTests.sh
code/product/armCtrl/: CMakeLists.txt  armCtrl.c  armCtrl.h  robot.c  robot.h
code/product/board/: board.c  board.h
code/product/counter/: CMakeLists.txt  counter.c  counter.h
code/product/fileManager/: CMakeLists.txt  fileCtrl.c  fileCtrl.h  fileManager.c  fileManager.h
code/product/led/: ledCtrl.c  ledCtrl.h  ledCtrlImpl.c  ledCtrlImpl.h
code/product/ledCtrl/: CMakeLists.txt  led.c  led.h  ledCtrl.c  ledCtrl.h  ledData.c  ledData.h  ledDataImpl.c  ledDataImpl.h  ledImpl.c  ledImpl.h
code/test/double/: CMakeLists.txt  board.c  board.h  fileCtrl.c  led.c  led.h  robot.h
code/test/test/: CMakeLists.txt  testArmCtrl.cpp  testCounter.cpp  testFileManager.cpp  testLed.cpp  testLedCtrl.cpp  testLedImpl.cpp  testMain.cpp  testSuite.cpp
docs/best-practice/: index.html
docs/category/environment/: index.html
docs/category/guide/: index.html
docs/category/intro/: index.html
docs/category/reference/: index.html
docs/environment/exec/: index.html
docs/environment/googletest/: index.html
docs/environment/wsl/: index.html
docs/guide/bestPractice/: index.html
docs/guide/dependencies/: index.html
docs/guide/pattern/: index.html
docs/how-to-break-dependency/compile-switch/: index.html
docs/how-to-break-dependency/dependencies/: index.html
docs/how-to-break-dependency/extract/: index.html
docs/how-to-break-dependency/functional-pointer/: index.html
docs/how-to-break-dependency/link/: index.html
docs/how-to-break-dependency/methods/: index.html
docs/how-to-break-dependency/mock/: index.html
docs/intro/benefits/: index.html
docs/intro/introduction/: index.html
docs/intro/reward/: index.html
docs/intro/tools/: index.html
docs/patterns/communication-based/: index.html
docs/patterns/output-based/: index.html
docs/patterns/pattern/: index.html
docs/patterns/state-based/: index.html
docs/reference/: index.html
docs/setup/exec/: index.html
docs/setup/googletest/: index.html
docs/setup/wsl/: index.html
guide/: docusaurus.config.ts  package-lock.json  package.json
guide/docs/best-practice/: index.md
guide/docs/environment/: _category_.json  build.md  exec.md  googletest.md  setup.md  wsl.md
guide/docs/guide/: bestPractice.md  dependencies.md  pattern.md
ja/: 404.html  index.html  sitemap.xml
ja/markdown-page/: index.html
markdown-page/: index.html
(+245 files in other folders)
